# cellophane

./: .gitignore  LICENSE.txt  PartialIdentification.py  README.md  constants.py  demo.ipynb  demo.py  metrics.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py
cellophane/: __init__.py  cellophane.py  metrics.py  utils.py
data/warfarin/: primary.csv
demo/: demo.ipynb
demo/data/warfarin/: auxiliary.csv
docs/fairness/: PartialIdentification.html  demo.html  index.html  metrics.html  utils.html
docs/fairness/docs/fairness/: index.html
html/cellophane/: cellophane.html  constants.html  index.html  metrics.html  utils.html
html/fairness/: PartialIdentification.html  constants.html  index.html  utils.html
