[build-system]
requires = ["setuptools >= 40.6.0", "wheel","matplotlib>=3.1.3","numpy>=1.18.1","pandas>=1.0.1","seaborn>=0.10.0","scikit-learn>=0.23.1"]
build-backend = "setuptools.build_meta"
[package]
name = "cellophane"
version = "0.1.0"
python = "^3.6"
readme = "README.md"
license = "MIT"
keywords = ["bias", "fairness", "auditing", "BISG"]
description = "Auditing tool for use when protected class membership is unobserved in data"
