[metadata]
name = cellophane
version = 0.1.0
url = https://github.com/relaxedplan/cellophane
author = Michael McKenna
author_email = michael.mckenna95@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Auditing tool for use when protected class membership is unobserved in data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6